--- a/homework/ga-press-release/index.html
+++ b/homework/ga-press-release/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-
 <html>
 <head>
-		<title>General Assembly</title>
+	<title>General Assembly</title>
 </head>
 
 <body>
 	<h1>General Assembly offers Classes and Workshops Worldwide</h1>
 
-<h2>For Immediate Release</h2>
+<img src="logo.jpg" alt=GA Logo">
+
+	<h2>For Immediate Release</h2>
 
 	<p>General Assembly, which started in New York as a startup incubator, now offers classes and workshops in technology, design, and entrepreneurship, with campuses around the world in:</p>
 
@@ -23,7 +24,7 @@
  </ul>
 
 <p>
-  For more information, visit General Assembly's website (http://generalassemb.ly)
+  For more information, visit <a href="http://generalassemb.ly">General Assembly's website </a>
 </p>
 
 </body>
