Trying to get the link to link

--- a/homework/Practicing/index.html
+++ b/homework/Practicing/index.html
@@ -11,7 +11,8 @@
 
 
 <p>
-  Do you wanna hear a little ditty? <a href="https://www.youtube.com/watch?v=9wYxeLlXsa4>Click here </a>
+  Do you wanna hear a little ditty about the Kansas City Kitty? <a href="www.youtube.com/watch?v=9wYxeLlXsa4>Click here </a>
+  
 </p>
 
 </body>
