JMoney making things work with css links

--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
-<h1>Hello, world!</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Jenny's Resume</title>
 
-<h2>Hello, computer!</h2>
+	<link rel="stylesheet" href="styles.css"/>
+
+</head>
+<body>
+
+	<h1>Hello, world!</h1>
+
+	<p>I'm taking FEWD so that I don't end up like a dinosaur who knows nothing about the internet in my 30s. I also want to be able to tinker around and see how I can use it as a creative outlet.</p>
+
+</body>
+
 
 <h3>Good evening, buena serra bello</h3>
 
 <h4>Come stai, sta bene?</h4>
+
+<p>
+ 	<a href="file:///Users/jennymorris/Documents/GitHub/jleighmo.github.io/homework/ga-press-release/index.html">GA Press Release </a>
+</p>
+	<a href="file:///Users/jennymorris/Documents/GitHub/jleighmo.github.io/homework/Practicing/index.html">Practicing </a>
+<p>
+
 
 <a href="resume.html">Jenny's Resume</a>
