--- a/class-work/index.html
+++ b/class-work/index.html
@@ -1,2 +1,9 @@
-<h1>wednesday wednesday blah blah</h1>
-<h2>doing thangs</h2>
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+</head>
+<body>
+
+</body>
+</html>
