--- a/homework/ga-press-release/index.html
+++ b/homework/ga-press-release/index.html
@@ -14,9 +14,9 @@
 	<p>General Assembly, which started in New York as a startup incubator, now offers classes and workshops in technology, design, and entrepreneurship, with campuses around the world in:</p>
 
 <ul>
-  <li>Austin</>
+  <li>Austin</li>
   <li>Boston</li>
-  <li>Hong Kong</>
+  <li>Hong Kong</li>
   <li>London</li>
   <li>Los Angeles</li>
   <li>New York City</li>
