--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<title>Jenny's Resume</title>
 
+	<link href="https://fonts.googleapis.com/css?family=Roboto:100,400,700" rel="stylesheet">
+
 	<link rel="stylesheet" href="styles.css"/>
 
 </head>
