--- a/homework/travel-bucket-list/index.html
+++ b/homework/travel-bucket-list/index.html
@@ -1,32 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-	
-	<title>spec.png</title>
+
+
+	<title>My 2017 Travel Bucket List</title>
+	<link rel="stylesheet" href="img/styles.css"/>
 
 </head>
 
-<h1>My 2017 Travel Bucket List</h1>
+<div> class="header"</div>
+	<h1>My 2018 Travel Bucket List</h1>
 
-</head>
-
-{
-<p>
-	text-align: center
-
-Maui 
-Reykavik
-Aspen 
-
-</p>
-
-}
-
-
+<div> class="nav">
+<a href="#Maui"></a>
+<a href="#Reykajavik"></a>
+<a href="#Aspen"></a>
+</div>
 
 <h2>1. Maui</h2>
 
-<link rel="stylesheet" href="img/styles.css"/>
 
 <img src="travel-bucket-list/img/maui.jpg" alt=KC Kitty">
 
@@ -43,6 +35,7 @@ Aspen
 Some Kinda Footer Here
 
 </body>
+
 
 </html>
 
