Fashion Blog 2 homework
updated CSS throughout, added section

--- a/class-work/class05/fashion-blog/index.html
+++ b/class-work/class05/fashion-blog/index.html
@@ -12,21 +12,20 @@
 </head>
 
 <body>
-
-	<div id="container">
-
+<div class="container">
 		<header>
 			<h1>Sartre's List</h1>
+
 			<h2>Better-Dressed People</h2>
-			<nav>
-				<a href="#">Women’s</a>
-				<a href="#">Men’s</a> 
-				<a href="#">On the Street</a>
-				<a href="#">The Catwalk</a>
-				<a href="#">AdWatch</a> 
-				<a href="#">AdWatch</a>
-	        </nav>
+		<nav class="clear">
+			<a href="#">Women’s</a><a href="#">Men’s</a>
+			<a href="#">On the Street</a><a href="#">The Catwalk</a>
+			<a href="#">AdWatch</a>
+			<a href="#">About</a>
+	    </nav>
         </header>
+
+<section>
 
 <article>
 	
@@ -60,7 +59,19 @@
 
 </article>
 
-<footer>
+</section>
+
+<aside>
+	<h4>About Us</h4>
+
+<p>Sartre’s List is u salvia, fixie mumblecore ex aesthetic qui minim blog cliche. Retro disrupt keytar PBR, delectus consectetur flexitarian fingerstache selfies nostrud Schlitz. Tempor Wes Anderson banh mi bicycle rights. Eu occaecat Williamsburg yr letterpress, biodiesel plaid tote bag cliche messenger bag lomo bespoke sapiente next level.</p>
+	
+
+</aside>
+
+<div class="clear></div>
+
+<footer class="clear">
 	
 	<a href="#">Home</a>
 	<a href="#">Women's</a>
