--- a/class-work/class05/fashion-blog/index.html
+++ b/class-work/class05/fashion-blog/index.html
@@ -17,7 +17,7 @@
 			<h1>Sartre's List</h1>
 
 			<h2>Better-Dressed People</h2>
-		<nav class="clear">
+		<nav>
 			<a href="#">Women’s</a><a href="#">Men’s</a>
 			<a href="#">On the Street</a><a href="#">The Catwalk</a>
 			<a href="#">AdWatch</a>
@@ -69,9 +69,10 @@
 
 </aside>
 
-<div class="clear></div>
 
-<footer class="clear">
+<div class="clear"></div>
+
+<footer>
 	
 	<a href="#">Home</a>
 	<a href="#">Women's</a>
