--- a/homework/class07/startup-matchmaker/index.html
+++ b/homework/class07/startup-matchmaker/index.html
@@ -4,8 +4,32 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Oswald:700|Merriweather:700,700italic" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="css/styles.css">
+	<STYLE>A {text-decoration: none;} </STYLE>
 </head>
 <body>
+
+<header>
+<h1>Startup Matchmaker</h1>
+	<nav>
+	<a href="#"class="bold-link">DEVELOPERS</a>
+	<a href="#""bold-link">DESIGNERS</a>
+	<a href="#">How it Works</a>
+	<a href="#">Our Team</a>
+	<a href="#">Blog</a>
+</nav>
+</header>
+
+<section class="banner">
+	<aside>
+		<h2>Meet Your Match</h2>
+		<p>Have a great idea for a product, but need help making it a reality? We're here to help. Startup Matchmaker is the best place for designers and developers to find eachother.</p>
+	</aside>
+
+</section>
+
+<footer>
+<i class="fas fa-heart"></i>
+</footer>
 
 </body>
 </html>
