Fashion blog 2 homework
CSS Button Styling

--- a/homework/class07/startup-matchmaker/index.html
+++ b/homework/class07/startup-matchmaker/index.html
@@ -19,12 +19,39 @@
 </nav>
 </header>
 
+<p class="tagline">Because two brains <span>taste</span> <span>are</span> better than one.</p>
+
 <section class="banner">
 	<aside>
 		<h2>Meet Your Match</h2>
 		<p>Have a great idea for a product, but need help making it a reality? We're here to help. Startup Matchmaker is the best place for designers and developers to find eachother.</p>
 	</aside>
+</section>
 
+<section class="card">
+	<div class="card2">Create a Profile
+	Are you a Designer? Developer? Put yourself out there so that others can find you!
+	Sign Up Now
+
+<a href="#"class="button">Sign Up Now</a>
+
+</div>
+		
+<div class="card2">Find a Developer
+	 Looking for a fantastic developer to work with on the next big thing? Look no further.
+	 Start Your Search
+
+	 <a href="#"class="button">Sign Up Now</a>
+
+</div>
+		
+	<div class="card2">Find a Designer
+	Need someone who can make a product intuitive, appealing, and user-friendly? Get your wireframes ready.
+	Start Your Search"
+
+	<a href="#"class="button">Sign Up Now</a>
+
+</div>
 </section>
 
 <footer>
