Button header styling
Misc css

--- a/homework/class07/startup-matchmaker/index.html
+++ b/homework/class07/startup-matchmaker/index.html
@@ -29,7 +29,7 @@
 </section>
 
 <section class="card">
-	<div class="card2">Create a Profile
+	<div class="card2"><h2>Create a Profile</h2>
 	Are you a Designer? Developer? Put yourself out there so that others can find you!
 	Sign Up Now
 
@@ -37,7 +37,7 @@
 
 </div>
 		
-<div class="card2">Find a Developer
+<div class="card2"><h2>Find a Developer</h2>
 	 Looking for a fantastic developer to work with on the next big thing? Look no further.
 	 Start Your Search
 
@@ -45,7 +45,7 @@
 
 </div>
 		
-	<div class="card2">Find a Designer
+	<div class="card2"><h2>Find a Designer</h2>
 	Need someone who can make a product intuitive, appealing, and user-friendly? Get your wireframes ready.
 	Start Your Search"
 
