--- a/homework/class07/startup-matchmaker/index.html
+++ b/homework/class07/startup-matchmaker/index.html
@@ -55,7 +55,9 @@
 </section>
 
 <footer>
-<i class="fas fa-heart"></i>
+	<p>Made With <i class="fas fa-heart"></i> In NYC</p>
+<STYLE>A {text-decoration: none;} </STYLE>
+
 </footer>
 
 </body>
