--- a/homework/class07/startup-matchmaker/index.html
+++ b/homework/class07/startup-matchmaker/index.html
@@ -55,7 +55,7 @@
 </section>
 
 <footer>
-	<p>Made With <i class="fas fa-heart"></i> In NYC</p>
+	<p>&copy; 2018 Startup Matchmaker. Made With <i class="fas fa-heart"></i> In NYC</p>
 <STYLE>A {text-decoration: none;} </STYLE>
 
 </footer>
