--- a/homework/Final Project/index.html
+++ b/homework/Final Project/index.html
@@ -11,23 +11,31 @@
 <body>
 	<h1>Cohabz is for NYC renters who are sick of paying slum lords.
 </h1>
-	
-	<p>Our mission is to add transparency to the rental market in New York City and Brooklyn. We are a community who empowers renters to make informed decisions about the properties and neighborhoods they want to live in, before signing a lease.</p>
 
-	
-	<img class="westvillage" src="img/westvillage2.jpg">
+	<section class="banner">
+			<div class="wrapper">
+				<div class="blurb">
+					<p>Our mission is to add transparency to the rental market in New York City and Brooklyn. We are a community who empowers renters to make informed decisions about the properties and neighborhoods they want to live in, before signing a lease.</p>
 
-
-<section class="callout">
+						<section class="callout">
+					 		<button>Rate Your Landlord NOW!</button>
+  						</section>
+				</div>
+			</div>
+	</section>
+		<div class="wrapper">
      
-    <button>Rate Your Landlord NOW!</button>
-  </section>
+   
 
-  <!-- ** Don't forget to Add jQuery here ** -->
-  <script src="lib/js/config.js"></script>
-  <script src="lib/js/util.js"></script>
-  <script src="lib/js/jquery.emojiarea.js"></script>
-  <script src="lib/js/emoji-picker.js"></script>
+
+<footer>
+	<p>&copy; 2018 Cohabz. Made With <i class="fas fa-heart"></i> In NYC</p>
+<STYLE>A {text-decoration: none;} </STYLE>
+
+</footer>
+
+<script src="scripts/main.js"></script>  <script src="lib/js/config.js"></script>
+  		
 
 </body>
 </html>
