configuring emoji contact form

--- a/homework/Final Project/index.html
+++ b/homework/Final Project/index.html
@@ -66,10 +66,10 @@
 
 <script src="scripts/main.js"></script>  <script src="lib/js/config.js"></script>
   		
-  <script src="lib/js/config.js"></script>
-  <script src="lib/js/util.js"></script>
-  <script src="lib/js/jquery.emojiarea.js"></script>
-  <script src="lib/js/emoji-picker.js"></script>
+  <script src="scripts/main.js/config.js"></script>
+  <script src="scripts/main.js/util.js"></script>
+  <script src="scripts/main.js/jquery.emojiarea.js"></script>
+  <script src="scripts/main.js/emoji-picker.js"></script>
 
 
 </body>
