Working on final project emoji container formatting

--- a/homework/Final Project/index.html
+++ b/homework/Final Project/index.html
@@ -4,6 +4,8 @@
 	<title>Cohabz</title>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,300,600,800' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="css/emoji.css">
+
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
@@ -49,6 +51,7 @@
       </div>
       <div class="col-75">
         <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+        <input type="email" class="form-control" data-emojiable="converted" data-id="bad1114d-eb80-45ab-9892-63c95848a3ea" data-type="original-input" style="display: none;">
       </div>
     </div>
     <div class="row">
@@ -64,12 +67,13 @@
 
 </footer>
 
-<script src="scripts/main.js"></script>  <script src="lib/js/config.js"></script>
-  		
-  <script src="scripts/main.js/config.js"></script>
-  <script src="scripts/main.js/util.js"></script>
-  <script src="scripts/main.js/jquery.emojiarea.js"></script>
-  <script src="scripts/main.js/emoji-picker.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+<script src="scripts/config.js"></script>
+<script src="scripts/util.js"></script>
+<script src="scripts/jquery.emojiarea.js"></script>
+<script src="scripts/emoji-picker.js"></script>
+<script src="scripts/main.js"></script> 
+
 
 
 </body>
