--- a/class18/light-box-example/index.html
+++ b/class18/light-box-example/index.html
@@ -5,13 +5,17 @@
 </head>
 <body>
 	
+	<a href="images/chicken-nose.jpg" data-lightbox="image-1" data-title="Chicken Nose"</a>
+	<a href="images/ghostly-zoots.jpg" data-lightbox="image-2" data-title="ghostly Zoots"</a>
+
+
 	<img src="images/chicken-nose.png" alt="">
 	<img src="images/ghostly-zoots.png" alt="">
 	<img src="images/lil-mib.png" alt="">
 
+
 	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script src="js/lightbox.js"></script>
 	<script src="js/app.js"></script>
-	<a href="images/chicken-nose.jpg" data-lightbox="image-1" data-title="My caption">Image #1</a>
 </body>
 </html>
