--- a/class18/raindrops-example/index.html
+++ b/class18/raindrops-example/index.html
@@ -8,7 +8,7 @@
 			Note: You wil need to create an empty element to render Raindrops inside.
 			Be sure to give it a set width and height
 		-->
-
+		<p>This paragraph contains <br> raindrops.</p>
 		<!-- jQuery -->
 		<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 		<!-- jQuery UI -->
@@ -16,6 +16,7 @@
 		<!-- Raindrops.js -->
 		<!-- REPLACE ME WITH A SCRIPT POINTING TO RAINDROPS! -->
 		<!-- Custom scripts -->
+		<script type="js/raindrops.js"></script>
 		<script src="js/app.js"></script>
 	</body>
 </html>
