--- a/class18/raindrops-example/index.html
+++ b/class18/raindrops-example/index.html
@@ -8,8 +8,7 @@
 			Note: You wil need to create an empty element to render Raindrops inside.
 			Be sure to give it a set width and height
 		-->
-		<p>This paragraph contains <br> raindrops.</p>
-		<!-- jQuery -->
+<div id="box"</div>		<!-- jQuery -->
 		<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 		<!-- jQuery UI -->
 		<script src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
