--- a/homework/Final Project/index.html
+++ b/homework/Final Project/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
 	<title>Cohabz</title>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,300,600,800' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="styles.css">
@@ -22,13 +23,16 @@
 		<div class="wrapper">
      
  <div class="container">
+  
+
+
   <form action="action_page.php">
     <div class="row">
       <div class="col-25">
         <label for="fname">First Name</label>
       </div>
       <div class="col-75">
-        <input type="text" id="fname" name="firstname" placeholder="Your name..">
+        <input type="text" id="fname" name="firstname" placeholder="Your name.." data-emojiable="converted">
       </div>
     </div>
     <div class="row">
@@ -73,8 +77,6 @@
 <script src="scripts/jquery.emojiarea.js"></script>
 <script src="scripts/emoji-picker.js"></script>
 <script src="scripts/main.js"></script> 
-
-
 
 </body>
 </html>
