--- a/homework/Final Project/emoji-picker-master/demo/index.html
+++ b/homework/Final Project/emoji-picker-master/demo/index.html
@@ -19,8 +19,10 @@
 
   <body class="text-center">
 
-    <h1 class="jumbotron">Our mission is to add transparency to the rental market in New York City and Brooklyn. We are a community who empowers renters to make informed decisions about the properties and neighborhoods they want to live in, before signing a lease.</h1>
-    
+<section class="banner">
+    <h1 class="jumbotron">Our mission is to add transparency to the rental market in New York City and Brooklyn. We are a community who empowers renters to make informed decisions about the neighborhoods they live in before signing a lease.</h1>    
+  </section>
+
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-10">
@@ -48,9 +50,19 @@
       </a>
     </p>
 
+    <div id="map"></div>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwTnvv9evimkrhAbQ2DAfdmzlseDM3HSQ"></script>
+
+    <footer>
+      <div class="wrapper">
+        © 2018 Cohabz. Made with <i class="fas fa-heart" style="color: red;"></i> in NY.
+      </div>
+    </footer>
+
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 
     <!-- Begin emoji-picker JavaScript -->
+    <script src="js/app.js"></script>
     <script src="../lib/js/config.js"></script>
     <script src="../lib/js/util.js"></script>
     <script src="../lib/js/jquery.emojiarea.js"></script>
@@ -59,20 +71,15 @@
 
     <script>
       $(function() {
-        // Initializes and creates emoji set from sprite sheet
         window.emojiPicker = new EmojiPicker({
           emojiable_selector: '[data-emojiable=true]',
           assetsPath: '../lib/img/',
           popupButtonClasses: 'fa fa-smile-o'
         });
-        // Finds all elements with `emojiable_selector` and converts them to rich emoji input fields
-        // You may want to delay this step if you have dynamically created input fields that appear later in the loading process
-        // It can be called as many times as necessary; previously converted input fields will not be converted again
         window.emojiPicker.discover();
       });
     </script>
     <script>
-      // Google Analytics
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -81,5 +88,26 @@
       ga('create', 'UA-49610253-3', 'auto');
       ga('send', 'pageview');
     </script>
+
+  <form name="submit-to-google-sheet">
+  <input name="address" type="text" placeholder="What's your address?" required>
+  <input name="landlordRating" type="text" placeholder="Rate your landlord with emojis!">
+  <input name="neighborhoodRating" type="text" placeholder="Rate your neighborhood with emojis!">
+  <input name="freeForm" type="text" placeholder="Anything else to share with your neighbor?">
+  <button type="Rate Your Landlord NOW!">Send</button>
+</form>
+</form>
+
+<script>
+  const scriptURL = '<https://script.google.com/macros/s/AKfycbz-h0YqHPz84tfjzhu1S_A4gEkoGyTMQmls5cbK49drWIzSxuYj/exec>'
+  const form = document.forms['submit-to-google-sheet']
+
+  form.addEventListener('submit', e => {
+    e.preventDefault()
+    fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+      .then(response => console.log('Success!', response))
+      .catch(error => console.error('Error!', error.message))
+  })
+</script>
   </body>
 </html>
